@@ -1,4 +1,6 @@
 <unreleased> Jim Winstead <jimw@mysql.com> (4.001)
+* Do not tell Perl that the contents of binary fields are UTF-8.
+  [rt.cpan.org #22123], original patch by Joost Diepenmaat
 * Fix double-free of bound parameters when freeing statements. (Bug #20559)
 * Make sure to handle "magical" values in a couple of places. (Bug #20104)
 * Update the hints about what to do when zlib is found missing while
